--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@vercel/analytics": "^0.1.11",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.1.7",
     "next": "13.0.5",
