--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "18.0.9",
     "@vercel/analytics": "^0.1.11",
     "gray-matter": "^4.0.3",
+    "kysely": "^0.24.2",
+    "kysely-planetscale": "^1.3.0",
     "markdown-to-jsx": "^7.1.7",
     "next": "^13.3.0",
     "react": "18.2.0",
