--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "rehype-katex": "^6.0.2",
+    "remark-math": "^5.1.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
