--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "rehype-katex": "^6.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "typescript": "4.9.3"
   },
