--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "kysely": "^0.24.2",
     "kysely-planetscale": "^1.3.0",
     "markdown-to-jsx": "^7.1.7",
-    "next": "^13.3.0",
+    "next": "^13.4.5-canary.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "^3.0.1",
