Add: Chat page with Vercel AI SDK and langchain

--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@vercel/analytics": "^0.1.11",
+    "ai": "^2.1.22",
     "axios": "^1.3.6",
     "eventsource-parser": "^1.0.0",
     "gray-matter": "^4.0.3",
     "jsdom": "^21.1.1",
     "kysely": "^0.24.2",
     "kysely-planetscale": "^1.3.0",
+    "langchain": "^0.0.112",
     "markdown-to-jsx": "^7.1.7",
-    "next": "^13.4.5-canary.0",
+    "next": "^13.4.11-canary.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "^3.0.1",
