--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@mozilla/readability": "^0.4.4",
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/supabase-js": "^2.36.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@vercel/analytics": "^0.1.11",
+    "@xenova/transformers": "^2.6.2",
     "ai": "^2.1.22",
     "axios": "^1.3.6",
     "eventsource-parser": "^1.0.0",
