--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "generate:rss": "node scripts/rss.mjs",
-    "prebuild": "npm run generate:rss"
+    "prebuild": "npm run generate:rss",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@mozilla/readability": "^0.4.4",
@@ -31,6 +32,7 @@
     "marked": "^5.1.2",
     "next": "^14.0.1",
     "next-connect": "^1.0.0",
+    "next-sitemap": "^4.2.3",
     "openai-edge": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
