--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "openai-edge": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
     "typescript": "4.9.3"
   },
@@ -43,6 +45,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@types/jsdom": "^21.1.1",
     "@types/marked": "^5.0.1",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.13",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
