--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^3.0.1",
     "typescript": "4.9.3"
   },
