--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@vercel/analytics": "^0.1.11",
+    "@vercel/speed-insights": "^1.0.2",
     "@xenova/transformers": "^2.6.2",
     "ai": "^2.1.22",
     "axios": "^1.6.0",
