--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "next": "^14.0.1",
     "next-connect": "^1.0.0",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.2.1",
     "openai-edge": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
