--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "lint": "next lint",
     "generate:rss": "node scripts/rss.mjs",
     "prebuild": "npm run generate:rss",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "generate:embeddings": "tsx scripts/generateEmbeddings.ts"
   },
   "dependencies": {
     "@mozilla/readability": "^0.4.4",
+    "@neondatabase/serverless": "^0.7.2",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.36.0",
     "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "18.0.9",
     "@vercel/analytics": "^0.1.11",
     "@vercel/speed-insights": "^1.0.2",
     "@xenova/transformers": "^2.6.2",
     "ai": "^2.1.22",
-    "axios": "^1.6.0",
+    "axios": "^1.6.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.0",
     "eventsource-parser": "^1.0.0",
     "gray-matter": "^4.0.3",
     "jsdom": "^21.1.1",
@@ -38,13 +42,18 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "openai-edge": "^1.2.0",
-    "react": "18.2.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
+    "pg": "^8.11.3",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^3.0.1",
+    "stream": "^0.0.2",
+    "tsx": "^4.7.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
@@ -57,5 +66,9 @@
     "eslint-config-next": "13.3.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.2.4"
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false
   }
 }
