add marked-mangle and marked-gfm-heading-id

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "langchain": "^0.0.112",
     "markdown-to-jsx": "^7.1.7",
     "marked": "^5.1.2",
-    "marked-gfm-heading-id": "^3.1.2",
+    "marked-gfm-heading-id": "^3.1.3",
+    "marked-mangle": "^1.1.7",
     "next": "^14.0.1",
     "next-connect": "^1.0.0",
     "next-sitemap": "^4.2.3",
