--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^3.0.1",
+    "remark-math": "^6.0.0",
     "tsx": "^4.7.0",
     "typescript": "4.9.3"
   },
