--- a/package.json
+++ b/package.json
@@ -10,46 +10,54 @@
     "generate:rss": "node scripts/rss.mjs",
     "prebuild": "npm run generate:rss",
     "postbuild": "next-sitemap",
-    "generate:embeddings": "tsx scripts/generateEmbeddings.ts"
+    "generate-embeddings": "tsx scripts/generateEmbeddings.ts"
   },
   "dependencies": {
     "@mozilla/readability": "^0.4.4",
-    "@neondatabase/serverless": "^0.7.2",
+    "@neondatabase/serverless": "^0.10.4",
     "@types/node": "18.11.9",
     "@types/react": "^18.2.48",
     "@types/react-dom": "18.0.9",
     "@vercel/analytics": "^0.1.11",
+    "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.0.2",
     "@xenova/transformers": "^2.6.2",
     "ai": "^2.1.22",
     "axios": "^1.6.5",
+    "dotenv": "^16.4.5",
     "eventsource-parser": "^1.0.0",
     "gray-matter": "^4.0.3",
+    "install": "^0.13.0",
     "jsdom": "^21.1.1",
     "kysely": "^0.24.2",
     "kysely-planetscale": "^1.3.0",
     "langchain": "^0.0.112",
     "markdown-to-jsx": "^7.1.7",
     "marked": "^5.1.2",
-    "next": "^14.0.1",
+    "next": "^15.0.3",
     "next-connect": "^1.0.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
+    "openai": "^4.73.1",
     "openai-edge": "^1.2.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "pg": "^8.11.3",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
+    "pgvector": "^0.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^3.0.1",
+    "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "tsx": "^4.7.0",
-    "typescript": "4.9.3"
+    "remark-parse": "^11.0.0",
+    "tsx": "^4.19.2",
+    "typescript": "4.9.3",
+    "unified": "^11.0.5",
+    "voyageai": "^0.0.1-5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
@@ -58,7 +66,7 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.13",
     "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "eslint-config-next": "^15.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.2.4"
   }
