--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,6 +13,7 @@
     "generate-embeddings": "tsx scripts/generateEmbeddings.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
     "@mozilla/readability": "^0.4.4",
     "@neondatabase/serverless": "^0.10.4",
     "@types/node": "18.11.9",
@@ -22,7 +23,7 @@
     "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.0.2",
     "@xenova/transformers": "^2.6.2",
-    "ai": "^2.1.22",
+    "ai": "^2.2.37",
     "axios": "^1.6.5",
     "dotenv": "^16.4.5",
     "eventsource-parser": "^1.0.0",
