--- a/.github/workflows/generate-embeddings.yml
+++ b/.github/workflows/generate-embeddings.yml
@@ -34,8 +34,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v41
         with:
-          files: |
-            - 'posts/*.md'
+          files: 'posts/*.md'
 
       - name: Generate embeddings for changed files
         if: steps.changed-files.outputs.any_changed == 'true'
