--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gray-matter": "^4.0.3",
     "install": "^0.13.0",
     "jsdom": "^21.1.1",
+    "katex": "^0.16.22",
     "kysely": "^0.24.2",
     "kysely-planetscale": "^1.3.0",
     "langchain": "^0.0.112",
@@ -64,6 +65,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@types/jsdom": "^21.1.1",
     "@types/marked": "^5.0.1",
+    "@types/pg": "^8.15.5",
     "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.13",
     "eslint": "8.38.0",
