--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "tsx": "^4.19.2",
     "typescript": "4.9.3",
     "unified": "^11.0.5",
+    "uuid": "^13.0.0",
     "voyageai": "^0.0.1-5"
   },
   "devDependencies": {
@@ -67,6 +68,7 @@
     "@types/marked": "^5.0.1",
     "@types/pg": "^8.15.5",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.38.0",
     "eslint-config-next": "^15.0.3",
