--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "types": ["katex", "pg"],
+    "types": ["pg"],
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
