--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
+    "three": "^0.160.0",
     "tsx": "^4.19.2",
     "typescript": "4.9.3",
     "unified": "^11.0.5",
@@ -69,6 +70,7 @@
     "@types/marked": "^5.0.1",
     "@types/pg": "^8.15.5",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@types/three": "^0.160.0",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.38.0",
