--- a/.github/workflows/generate-embeddings.yml
+++ b/.github/workflows/generate-embeddings.yml
@@ -3,7 +3,7 @@ name: Generate Blog Post Embeddings
 on:
   push:
     paths:
-      - 'posts/*.md'
+      - "posts/*.md"
     branches:
       - main # or your default branch
 
@@ -24,8 +24,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: "18"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -34,7 +34,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v41
         with:
-          files: 'posts/*.md'
+          files: "posts/*.md"
 
       - name: Generate embeddings for changed files
         if: steps.changed-files.outputs.any_changed == 'true'
