--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
+    "swr": "^2.3.6",
     "tsx": "^4.19.2",
     "typescript": "4.9.3",
     "unified": "^11.0.5",
