add viz component

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@xenova/transformers": "^2.6.2",
     "ai": "^2.2.37",
     "axios": "^1.6.5",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-zoom": "^3.0.0",
     "dotenv": "^16.4.5",
     "eventsource-parser": "^1.0.0",
     "gray-matter": "^4.0.3",
@@ -44,7 +47,6 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "openai": "^4.73.1",
-    "openai-edge": "^1.2.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "pg": "^8.11.3",
@@ -60,9 +62,10 @@
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "swr": "^2.3.6",
-    "three": "^0.160.0",
+    "three": "^0.180.0",
     "tsx": "^4.19.2",
     "typescript": "4.9.3",
+    "umap-js": "^1.4.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "uuid": "^13.0.0",
@@ -74,10 +77,10 @@
     "@types/marked": "^5.0.1",
     "@types/pg": "^8.15.5",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "@types/three": "^0.160.0",
+    "@types/three": "^0.180.0",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.38.0",
+    "eslint": "^9.18.0",
     "eslint-config-next": "^15.0.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.5",
