--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-selection": "^3.0.11",
+    "@types/d3-zoom": "^3.0.8",
     "@types/jsdom": "^21.1.1",
     "@types/marked": "^5.0.1",
     "@types/pg": "^8.15.5",
