--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "langchain": "^0.0.112",
     "markdown-to-jsx": "^7.1.7",
     "marked": "^5.1.2",
+    "ml-kmeans": "^6.0.0",
     "next": "^15.0.3",
     "next-connect": "^1.0.0",
     "next-sitemap": "^4.2.3",
