--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "gray-matter": "^4.0.3",
     "image-size": "^2.0.2",
     "install": "^0.13.0",
-    "jsdom": "^21.1.1",
+    "jsdom": "^27.0.1",
     "katex": "^0.16.22",
     "kysely": "^0.24.2",
     "kysely-planetscale": "^1.3.0",
@@ -86,6 +86,7 @@
     "@types/pg": "^8.15.5",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/three": "^0.180.0",
+    "@types/unist": "^3.0.3",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.13",
     "chalk": "^5.6.2",
