--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,4 @@ VOYAGE_AI_API_KEY=your_voyage_ai_api_key_here
 
 # Neon PostgreSQL Database URL (main database for blog content chunks)
 # Format: postgresql://user:password@host/database?sslmode=require
-DATABASE_URL=postgresql://user:password@host/database?sslmode=require
-
-# Tweet Database URL (if using tweets feature)
-TWEET_DATABASE_URL=postgresql://user:password@host/database?sslmode=require
+POSTGRES_URL=postgresql://user:password@host/database?sslmode=require
