Update .env.example to include Spotify API credentials

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ VOYAGE_AI_API_KEY=your_voyage_ai_api_key_here
 # Neon PostgreSQL Database URL (main database for blog content chunks)
 # Format: postgresql://user:password@host/database?sslmode=require
 POSTGRES_URL=postgresql://user:password@host/database?sslmode=require
+
+# Spotify API
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_REFRESH_TOKEN=
