--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
     "@floating-ui/react": "^0.27.16",
-    "@mozilla/readability": "^0.4.4",
+    "@mozilla/readability": "^0.6.0",
     "@neondatabase/serverless": "^0.10.4",
     "@types/node": "18.11.9",
     "@types/react": "^18.2.48",
@@ -29,8 +29,6 @@
     "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.0.2",
     "@xenova/transformers": "^2.6.2",
-    "ai": "^2.2.37",
-    "axios": "^1.6.5",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
@@ -43,11 +41,10 @@
     "katex": "^0.16.22",
     "kysely": "^0.24.2",
     "kysely-planetscale": "^1.3.0",
-    "langchain": "^0.0.112",
     "markdown-to-jsx": "^7.1.7",
     "marked": "^5.1.2",
     "ml-kmeans": "^6.0.0",
-    "next": "^15.0.3",
+    "next": "^15.5.6",
     "next-connect": "^1.0.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
@@ -60,7 +57,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-syntax-highlighter": "^16.1.0",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
@@ -77,7 +74,7 @@
     "voyageai": "^0.0.1-5"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.8",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/d3-scale": "^4.0.9",
     "@types/d3-selection": "^3.0.11",
     "@types/d3-zoom": "^3.0.8",
@@ -88,7 +85,7 @@
     "@types/three": "^0.180.0",
     "@types/unist": "^3.0.3",
     "@types/uuid": "^10.0.0",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.22",
     "chalk": "^5.6.2",
     "cli-table3": "^0.6.5",
     "eslint": "^9.18.0",
@@ -96,13 +93,21 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.5",
     "ora": "^9.0.0",
-    "postcss": "^8.4.31",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.4.18"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,css,md}": [
       "prettier --write"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "js-yaml@<3.14.2": "3.14.2",
+      "js-yaml@>=4.0.0 <4.1.1": "4.1.1",
+      "glob@>=10.0.0 <10.5.0": "10.5.0",
+      "glob@>=11.0.0 <11.1.0": "11.1.0"
+    }
   }
 }
