--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "ora": "^9.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.18"
   },
   "lint-staged": {
