--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "markdown-to-jsx": "^7.1.7",
     "marked": "^5.1.2",
     "ml-kmeans": "^6.0.0",
-    "next": "^15.5.6",
+    "next": "^16.0.7",
     "next-connect": "^1.0.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
@@ -66,7 +66,7 @@
     "swr": "^2.3.6",
     "three": "^0.180.0",
     "tsx": "^4.19.2",
-    "typescript": "4.9.3",
+    "typescript": "^5.7.3",
     "umap-js": "^1.4.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
