--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ VOYAGE_AI_API_KEY=your_voyage_ai_api_key_here
 # Format: postgresql://user:password@host/database?sslmode=require
 POSTGRES_URL=postgresql://user:password@host/database?sslmode=require
 
+# Anthropic API Key for LLM operations (cluster labeling, etc.)
+# Get yours at: https://console.anthropic.com/
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
 # Spotify API
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
