--- a/package.json
+++ b/package.json
@@ -108,7 +108,9 @@
       "js-yaml@<3.14.2": "3.14.2",
       "js-yaml@>=4.0.0 <4.1.1": "4.1.1",
       "glob@>=10.0.0 <10.5.0": "10.5.0",
-      "glob@>=11.0.0 <11.1.0": "11.1.0"
+      "glob@>=11.0.0 <11.1.0": "11.1.0",
+      "qs": ">=6.13.0",
+      "mdast-util-to-hast": ">=13.2.1"
     }
   }
 }
