add workflow_dispatch trigger to generate-embeddings workflow

--- a/.github/workflows/generate-embeddings.yml
+++ b/.github/workflows/generate-embeddings.yml
@@ -6,6 +6,7 @@ on:
       - "posts/*.md"
     branches:
       - main # or your default branch
+  workflow_dispatch:
 
 jobs:
   generate-embeddings:
